[package]
name = "vesu-liquidator"
version = "0.3.1"
edition = "2021"
license = "MIT"
homepage = "https://www.vesu.xyz/"
repository = "https://github.com/astraly-labs/Vesu-liquidator"
description = "Liquidator bot for the Vesu Protocol"
readme = "README.md"
keywords = ["vesu", "liquidator", "bot", "starknet"]

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
bigdecimal = { version = "0.4.6", features = ["serde"] }
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.2", features = [
  "abigen-rs",
] }
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.5.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "2ddc694" }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"

apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }

[build-dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.2", features = [
  "abigen-rs",
] }

[dev-dependencies]
rstest = "0.23.0"
testcontainers = { version = "0.23.1" }
tracing-test = "0.2.5"

[features]
testing = []
