[package]
name = "vesu-liquidator"
version = "0.5.0"
edition = "2024"
license = "MIT"
homepage = "https://www.vesu.xyz/"
repository = "https://github.com/astraly-labs/Vesu-liquidator"
description = "Liquidator bot for the Vesu Protocol"
readme = "README.md"
keywords = ["vesu", "liquidator", "bot", "starknet"]

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
bigdecimal = { version = "0.4.5", features = ["serde"] }
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.7.0", features = [
  "abigen-rs",
] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.5.0"
reqwest = { version = "0.12.18", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9"
starknet = { version = "0.15" }
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "local-time",
] }
url = "2.5.2"

apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }

[build-dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.7.0", features = [
  "abigen-rs",
] }

[dev-dependencies]
rstest = "0.23.0"
testcontainers = { version = "0.23.1" }
tracing-test = "0.2.5"
