[package]
name = "vesu-liquidator"
version = "0.5.1"
edition = "2024"
license = "MIT"
homepage = "https://www.vesu.xyz/"
repository = "https://github.com/astraly-labs/Vesu-liquidator"
description = "Liquidator bot for the Vesu Protocol"
readme = "README.md"
keywords = ["vesu", "liquidator", "bot", "starknet"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = { version = "0.4", features = ["serde"] }
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.7.0", features = [
  "abigen-rs",
] }
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1.0"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.5.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
starknet = { version = "0.15" }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "local-time",
] }
url = "2.5"

apibara-core = { git = "https://github.com/apibara/dna", rev = "9caa385" }
apibara-sdk = { git = "https://github.com/apibara/dna", rev = "9caa385" }

[build-dependencies]
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.7.0", features = [
  "abigen-rs",
] }
